# team_pfn

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  item_data.csv  launch-base.xml  package.xml
action/: BinToteMove.action  Calibration.action  Generic.action  IntCode2Success.action  RobotArmMove.action  RobotArmMoveGlobal.action  Vacuum.action
dashboard/: index.html
json-examples/: item_distribution_generator.py
models/: 01_i_am_a_bunny_book.blend  01_i_am_a_bunny_book_0.blend  02_laugh_out_loud_joke_book.blend  02_laugh_out_loud_joke_book_0.blend  03_rawlings_baseball.blend  03_rawlings_baseball_0.blend  04_folgers_classic_roast_coffee.blend  04_folgers_classic_roast_coffee_0.blend  05_scotch_bubble_mailer.blend  05_scotch_bubble_mailer_0.blend  06_elmers_washable_no_run_school_glue.blend  06_elmers_washable_no_run_school_glue_0.blend  07_hanes_tube_socks.blend  08_womens_knit_gloves.blend  09_cloud_b_plush_bear.blend  10_kyjen_squeakin_eggs_plush_puppies.blend  11_creativity_chenille_stems.blend  12_oral_b_toothbrush_red.blend  13_cool_shot_glue_sticks.blend  14_dr_browns_bottle_brush.blend  15_fiskars_scissors_red.blend  16_platinum_pets_dog_bowl.blend  17_fitness_gear_3lb_dumbbell.blend  18_rolodex_jumbo_pencil_cup.blend  19_expo_dry_erase_board_eraser.blend  20_kleenex_tissue_box.blend  21_crayola_24_ct.blend  22_dove_beauty_bar.blend  23_staples_index_cards.blend  24_up_glucose_bottle.blend  25_dasani_water_bottle.blend  26_cherokee_easy_tee_shirt.blend  27_peva_shower_curtain_liner.blend  28_barkely_hide_bones.blend  29_soft_white_lightbulb.blend  30_safety_first_outlet_plugs.blend  31_command_hooks.blend  32_easter_turtle_sippy_cup.blend  33_scotch_duct_tape.blend  34_woods_extension_cord.blend  (+13 more)
msg/: FanucTwist.msg  XYZImage.msg
script/: arduino.sh  arduino_on_off.py  arduino_test.py  arm_control.py  arm_control_left.py  arm_control_lr.py  arm_control_right.py  arm_control_wrapper.py  calibration.py  calibration_srv_test.py  client_servo.py  conv_bin_coord.py  coord_test.py  coord_transformer.py  distance_check.py  get_tty.sh  item_locations.py  item_pose_est_srv_test.py  main_pick.py  main_stow.py  pipe_control.py  robot_comm_tester.py  run_arduino.py  segmentation_svc.py  servo_control.sh  snapshot.py  supervisor.py  test_components.py  test_main.py  touch_check.py  update_calibration.py  util.py  vacuum_check.py  vacuum_control.py
script/arduino/: howto
script/arduino/sketchbook/flightSenseSample_left/: flightSenseSample_left.ino
script/arduino/sketchbook/flightSenseSample_right/: flightSenseSample_right.ino
script/arduino/sketchbook/m_pres/: m_pres.ino
script/arduino/sketchbook/valve_switch/: valve_switch.ino
script/chainer_models/: model_enc_160.npz  model_tdec_160.npz
script/dummy/: arm_control.py  calibration.py  calibration_test.py  test_arm_control.py
script/get_item/: __init__.py  interface.py  move_until_grabbable.py
script/grab/: __init__.py  gripper.py  gripper_motion.py  gripper_motion_.py  gripper_sensing.py  interface.py  vacuum.py  vacuum_imgproc.py  vacuum_motions.py  vacuum_strategies.py  vacuum_tote_motions.py  vacuum_tote_strategies.py
script/hand/: README.md  actuator_nodes.py  controller.py  requirements.txt
script/imgproc/learning/: segmentation_train.py  toruichi_train.py
script/pick_process/: __init__.py  difficulty_order.py  interface.py
script/shelf_stow_locator/: __init__.py  always_a.py  gross_point_space.py  interface.py  random_location.py  temp_stow.py
script/stow_process/: __init__.py  interface.py  small_first.py  visible_greedy.py
script/tote_stow_locator/: __init__.py  interface.py  random_location.py
srv/: CalibData.srv  CalibrationUpdate.srv  CameraCoordinateTransform.srv  CameraCoordinateTransformAll.srv  CameraSnapshot.srv  CoordinateTransform.srv  Int2Success.srv  ItemName2Success.srv  ItemPoseEst.srv  ItemPoseEstAddData.srv  Segmentation.srv  Success.srv  distance.srv  fx8.srv  vac_check.srv
win/win_node/: about_dependencies.txt  win_node.sln
win/win_node/fx8_node/: AssemblyInfo.cpp  ReadMe.txt  fx8_node.cpp  fx8_node.vcxproj  fx8_node.vcxproj.filters
win/win_node/include/apc2016/: BinToteMoveAction.h  BinToteMoveActionFeedback.h  BinToteMoveActionGoal.h  BinToteMoveActionResult.h  BinToteMoveFeedback.h  BinToteMoveGoal.h  BinToteMoveResult.h  CalibData.h  CalibDataRequest.h  CalibDataResponse.h  CalibrationAction.h  CalibrationActionFeedback.h  CalibrationActionGoal.h  CalibrationActionResult.h  CalibrationFeedback.h  CalibrationGoal.h  CalibrationResult.h  CalibrationUpdate.h  CalibrationUpdateRequest.h  CalibrationUpdateResponse.h  CameraCoordinateTransform.h  CameraCoordinateTransformAll.h  CameraCoordinateTransformAllRequest.h  CameraCoordinateTransformAllResponse.h  CameraCoordinateTransformRequest.h  CameraCoordinateTransformResponse.h  CameraSnapshot.h  CameraSnapshotRequest.h  CameraSnapshotResponse.h  CoordinateTransform.h  CoordinateTransformRequest.h  FanucTwist.h  (+65 more)
win/win_node/item_pose_est_node/: ReadMe.txt  item_pose_est_node.cpp  item_pose_est_node.vcxproj  item_pose_est_node.vcxproj.filters  stdafx.cpp
win/win_node/realsense_node/: ReadMe.txt  realsense_node.cpp  realsense_node.vcxproj  realsense_node.vcxproj.filters  stdafx.cpp
win/win_node/src/: load_item_list.cpp  load_item_list.h  opencv_include.h  pcl_cfg.h  qt_cfg.h
win/win_roscpp/: about_dependencies.txt  roscpp_vc.sln
win/win_roscpp/console_bridge/: ReadMe.txt  console_bridge.vcxproj  console_bridge.vcxproj.filters  stdafx.cpp
win/win_roscpp/cpp_common/: ReadMe.txt  cpp_common.vcxproj  cpp_common.vcxproj.filters
win/win_roscpp/include/: XmlRpcClient.h
win/win_roscpp/rosconsole/: ReadMe.txt  rosconsole.vcxproj  rosconsole.vcxproj.filters  stdafx.cpp
win/win_roscpp/roscpp/: ReadMe.txt  roscpp.vcxproj  roscpp.vcxproj.filters
win/win_roscpp/roscpp_serialization/: ReadMe.txt  roscpp_serialization.cpp  roscpp_serialization.vcxproj  roscpp_serialization.vcxproj.filters  stdafx.cpp
win/win_roscpp/rostime/: ReadMe.txt  rostime.cpp  rostime.vcxproj  rostime.vcxproj.filters  stdafx.cpp
(+142 files in other folders)
